--- a/.github/workflows/Build_vb1980_Kernal4.4_Padavan.yml
+++ b/.github/workflows/Build_vb1980_Kernal4.4_Padavan.yml
@@ -31,7 +31,7 @@ on:
         - WR1200JS
         - NEWIFI
         - XY-C1
-        default: ZTE-E8820S
+        default: RM2100
       plugins:
         description: 'json format string of include configs'
         required: true
